fixed grid layout for .top-bar on Mobile screen

--- a/src/components/DropDown.css
+++ b/src/components/DropDown.css
@@ -1,3 +1,7 @@
+.DropDown {
+  display: flex;
+  flex-direction: row-reverse;
+}
 .DropDown button {
   display: flex;
   border: 1px solid var(--grey-200);
@@ -10,7 +14,7 @@
 
 .DropDown ul {
   position: absolute;
-  margin-top: 8px;
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
   border-radius: 12px;
@@ -26,4 +30,9 @@
 
 .DropDown ul li:first-child {
   border-bottom: 1px solid var(--grey-200);
+}
+@media only screen and (max-width: 743px) {
+  .DropDown button {
+    padding: 9px;
+  }
 }
