--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -44,6 +44,6 @@
   }
 
   .header-container .logo {
-    width: 81px;
+    max-width: 81px;
   }
 }
