--- a/src/components/ProductList.css
+++ b/src/components/ProductList.css
@@ -7,7 +7,7 @@
 
 .ProductSection .ProductList {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(5, minmax(200px, 1fr));
   gap: 24px;
 }
 
@@ -54,7 +54,7 @@
 
 @media only screen and (max-width: 1199px) {
   .BestSection .ProductList {
-    grid-template-columns: repeat(3, minmax(200px, 1fr));
+    grid-template-columns: repeat(2, minmax(200px, 1fr));
   }
 
   .ProductSection .ProductList {
@@ -73,6 +73,9 @@
 }
 
 @media only screen and (max-width: 744px) {
+  .BestSection .ProductList {
+    grid-template-columns: repeat(1, 1fr);
+  }
   .ProductSection .ProductList {
     grid-template-columns: repeat(2, minmax(150px, 1fr));
     gap: 16px;
