--- a/src/components/ProductSection.css
+++ b/src/components/ProductSection.css
@@ -19,27 +19,26 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  /* padding: 0 24px; */
 }
 
 @media only screen and (max-width: 700px) {
   .top-bar {
     grid-template-areas:
-      'a b'
-      'c d';
-    grid-template-columns: 1fr auto;
-    grid-template-rows: 1fr auto;
+      'a b b'
+      'c c d';
+    grid-template-columns: auto 1fr auto;
+    grid-template-rows: 1fr 1fr;
   }
   .top-bar h2 {
     grid-area: a;
   }
   .add-product-btn {
     grid-area: b;
+    justify-self: end;
   }
   .SearchBar {
     grid-area: c;
   }
-
   .Dropdown {
     grid-area: d;
   }
